reorder searchbar in navbar so it doesn't slide down with mobile hamburger menu; fix padding issue on small screens

--- a/app/assets/stylesheets/sections/_navigation.sass
+++ b/app/assets/stylesheets/sections/_navigation.sass
@@ -8,7 +8,7 @@ nav.top-bar
 
 .navbar
   form[role=search]
-    @media (min-width: $screen-md)
+    @media (min-width: $screen-sm)
       padding-right: 0
     @media (max-width: $screen-sm)
       border: none
